--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,4 +91,18 @@
     <string name="id_fmt">User ID: %s</string>
     <string name="email_fmt">Email: %s</string>
     <string name="title_activity_vendors_on_map">Map</string>
+
+    <string-array name="food_categories">
+        <item>NONE</item>
+        <item>BAKERY</item>
+        <item>JUICE</item>
+        <item>RESTAURANT</item>
+        <item>COFFEE</item>
+        <item>TEA</item>
+        <item>FAST_FOOD</item>
+        <item>CAFETERIA</item>
+        <item>DESSERT</item>
+        <item>MILKSHAKES</item>
+    </string-array>
+
 </resources>
